# octopus-voice-ai-assistant

./: CMakeLists.txt  README.md
scripts/: generate _wav.py  generate_wav.py  generate_wav_google.py
src/: CMakeLists.txt  main.cpp
src/audio_processor/: AudioRecorder.cpp  AudioRecorder.hpp  CMakeLists.txt
src/dialogue_manager/: CMakeLists.txt  DialogueManager.cpp  DialogueManager.hpp
src/language_model/: CMakeLists.txt  ChatGPTModel.cpp  ChatGPTModel.hpp  ILanguageModel.hpp  LanguageModel.cpp  LanguageModel.hpp  LanguageModelWrapper.cpp  LanguageModelWrapper.hpp  LlamaModel.cpp  LlamaModel.hpp
src/speech_recognition/: CMakeLists.txt  WhisperRecognizer.cpp  WhisperRecognizer.hpp
